--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -31,3 +31,22 @@ body {
     text-wrap: balance;
   }
 }
+
+.background-decoration-grey {
+  width: 30%;
+  height: 100vh;
+  position: fixed;
+  top:0;
+  background-color: #696969;
+  z-index: -1;
+}
+
+#img1 {
+  width:900px;
+  height: fit-content;
+}
+
+#home-section {
+  width: 100%;
+  height: 100vh;
+}
