--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -32,21 +32,40 @@ body {
   }
 }
 
-.background-decoration-grey {
-  width: 30%;
+nav ul{
+  font-size: 21px;
+}
+
+header {
+  position: relative;
+}
+
+header nav {
+  position: absolute;
+}
+
+#home-img {
+  width: 100%;
   height: 100vh;
-  position: fixed;
-  top:0;
-  background-color: #696969;
+  background-image: url("../img/img-inicio1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -2;
+}
+
+#gradient-home {
+  width: 100%;
+  height: 100vh;
+  background-image: radial-gradient(ellipse, rgba(0, 0, 0, 0.132) 0%, rgb(0, 0, 0) 100%);
   z-index: -1;
 }
 
-#img1 {
-  width:900px;
-  height: fit-content;
+section {
+  width:100%;
+  height: 400px;
 }
 
-#home-section {
-  width: 100%;
-  height: 100vh;
-}
+
+
+
+
