--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -32,10 +32,6 @@ body {
   }
 }
 
-nav ul{
-  font-size: 21px;
-}
-
 header {
   position: relative;
 }
@@ -44,20 +40,23 @@ header nav {
   position: absolute;
 }
 
+nav ul{
+  font-size: 21px;
+  align-items: center;
+}
+
+nav #container-logo {
+  width: 70%;
+  height: auto;
+}
+
 #home-img {
   width: 100%;
   height: 100vh;
-  background-image: url("../img/img-inicio1.jpg");
+  background-image: url("../img/img-inicio1.png");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -2;
-}
-
-#gradient-home {
-  width: 100%;
-  height: 100vh;
-  background-image: radial-gradient(ellipse, rgba(0, 0, 0, 0.132) 0%, rgb(0, 0, 0) 100%);
-  z-index: -1;
 }
 
 section {
