--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -31,3 +31,40 @@ body {
     text-wrap: balance;
   }
 }
+
+header {
+  position: relative;
+}
+
+header nav {
+  position: absolute;
+}
+
+nav ul{
+  font-size: 21px;
+  align-items: center;
+}
+
+nav #container-logo {
+  width: 70%;
+  height: auto;
+}
+
+#home-img {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/img-inicio1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -2;
+}
+
+section {
+  width:100%;
+  height: 400px;
+}
+
+
+
+
+
