--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -66,10 +66,25 @@ nav #container-logo {
   font-family: koulen;
   font-size: 60px;
 }
-
-section {
+/* borrar prueba despues*/
+#prueba {
   width:100%;
   height: 400px;
+}
+/*  */
+
+.section-title {
+  font-size: 30px;
+  font-family: Koulen;
+  font-weight: 500;
+  margin: 80px 0px;
+  text-align: center;
+}
+
+#sucursal-title {
+  font-family: Koulen;
+  font-weight: 500;
+  font-size: 30px;
 }
 
 
