--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -42,7 +42,12 @@ header nav {
 
 nav ul{
   font-size: 21px;
+  font-weight: 400;
   align-items: center;
+}
+
+nav ul:nth-child(n) :hover {
+  color:#F84646;
 }
 
 nav #container-logo {
@@ -59,9 +64,25 @@ nav #container-logo {
   z-index: -2;
 }
 
-section {
-  width:100%;
-  height: 400px;
+#home-h1 {
+  position: absolute;
+  top:40%;
+  left:65%;
+  font-family: koulen;
+  line-height: 90%;
+  font-size: 90px;
+}
+
+.section-title {
+  font-size: 50px;
+  font-family: Koulen;
+  margin: 60px 0px 30px 0px;
+  text-align: center;
+}
+
+#sucursal-title {
+  font-family: Koulen;
+  font-size: 30px;
 }
 
 
