--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -32,9 +32,15 @@ body {
   }
 }
 
+img {
+  display:inline;
+}
+
 header {
   position: relative;
 }
+
+/* NavBar */
 
 header nav {
   position: absolute;
@@ -55,7 +61,11 @@ nav #container-logo {
   width: 70%;
   height: auto;
 }
+/*  */
 
+/* Footer */
+
+/*  */
 #home-img {
   width: 100%;
   height: 100vh;
