--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -16,9 +16,17 @@
   }
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  scroll-behavior:smooth;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: #171717;
+  background-color: #171717; 
+  
   /* background: linear-gradient(
       to bottom,
       transparent,
