--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -51,7 +51,8 @@ header {
 }
 
 header nav {
-  position: absolute;
+  position: fixed;
+  z-index: 10;
 }
 
 nav ul{
@@ -65,6 +66,11 @@ nav ul:nth-child(n) :hover {
   color:#F84646;
 }
 
+#separador-nav {
+  width: 100%;
+  height: 230px;
+}
+
 nav #container-logo {
   width: 25%;
   height: auto;
@@ -73,6 +79,7 @@ nav #container-logo {
 #home-img {
   width: 100%;
   height: 100vh;
+  top:500px;
   background-image: url("../img/img-inicio1.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -115,3 +122,40 @@ nav #container-logo {
   color:white;
   font-size: 30px;
 }
+
+/* NAVBAR CITAS */
+#nav-bar-citas .circle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background-color: #F84646;
+  border-radius: 100%;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+#nav-bar-citas .container-paso-cita {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#nav-bar-citas .container-paso-cita {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 10px;
+  margin:0px;
+}
+
+#nav-bar-citas .si {
+  border-bottom: solid 3px #F84646;
+}
+
+#nav-bar-citas .no {
+  border-bottom: solid 3px #ffffff36;
+}
+
