--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -258,6 +258,15 @@ nav #container-logo {
   padding-right: 10px;
 }
 
+#profesional-container div {
+  border: none 0px;
+  background-color: #232323;
+}
+
+#seleccionar-personal .seleccionado {
+  border: solid #F84646 1px;
+}
+
 .servicios-container {
   scrollbar-width: thin; /* Ancho del scrollbar */
   scrollbar-color: #333 #999; /* Color del thumb y track */
