--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -249,3 +249,26 @@ nav #container-logo {
   border-radius: 4px;
   border-color: white;
 }
+
+/* seleccionar personal */
+
+#profesional-container {
+  scrollbar-width: thin; /* Ancho del scrollbar */
+  scrollbar-color: #333 #999; /* Color del thumb y track */
+  padding-right: 10px;
+}
+
+#profesional-container div {
+  border: none 0px;
+  background-color: #232323;
+}
+
+#seleccionar-personal .seleccionado {
+  border: solid #F84646 1px;
+}
+
+.servicios-container {
+  scrollbar-width: thin; /* Ancho del scrollbar */
+  scrollbar-color: #333 #999; /* Color del thumb y track */
+  padding-right: 10px;
+}
