ajustes a Resumen de reserva + ajuste estilos en seccion contacto

--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -244,6 +244,7 @@ nav #container-logo {
   transform: none !important;
 }
 
+/*Resumen reserva*/
 #tarjeta-reserva{
   border: 1px;
   border-radius: 4px;
