--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -74,7 +74,7 @@ nav ul:nth-child(n) :hover {
 
 #separador-nav {
   width: 100%;
-  height: 160px;
+  height: 170px;
 }
 
 nav #container-logo {
@@ -272,3 +272,9 @@ nav #container-logo {
   scrollbar-color: #333 #999; /* Color del thumb y track */
   padding-right: 10px;
 }
+/* Log in */
+
+#log-in {
+  height: 100vh;
+}
+
