--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -295,3 +295,17 @@ nav #container-logo {
   margin-bottom: 12px;
   font-size: 18px;
 }
+
+#form-fields-text textarea, #form-fields-text input{
+  background-color:rgba(255, 255, 255, 0.1);
+  color: white !important;
+  border-radius: 6px;
+  border: 1px solid #8d8d8d;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
+#global-citas-style{
+  border-top: 2px solid #8d8d8d;
+  padding-top: 10px;
+}
