--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -16,14 +16,23 @@
   }
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  scroll-behavior:smooth;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background-color: #171717; 
+  
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
@@ -41,30 +50,42 @@ header {
   position: relative;
 }
 
-header nav {
-  position: absolute;
+nav {
+  position: fixed;
+  z-index: 10;
+  background-color: rgb(0 0 0 / 20%);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 nav ul{
   font-size: 21px;
-
   font-weight: 400;
   color:white;
+  opacity: 100% !important;
   align-items: center;
+  transition: 0.3s;
 }
 
 nav ul:nth-child(n) :hover {
   color:#F84646;
+  transition: 0.3s;
+}
+
+#separador-nav {
+  width: 100%;
+  height: 170px;
 }
 
 nav #container-logo {
-  width: 70%;
+  width: 25%;
   height: auto;
 }
 
 #home-img {
   width: 100%;
   height: 100vh;
+  top:500px;
   background-image: url("../img/img-inicio1.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -89,8 +110,209 @@ nav #container-logo {
   text-align: center;
 }
 
+.select-staff{
+  background-color: #292929;
+  color: hsla(0, 0%, 100%, 0.700);
+  padding: 15px;
+  margin: auto;
+  border: solid 1px white;
+}
+
+.select-staff option{
+  font-size: 16px;
+  font-weight: bold;
+}
+
 #sucursal-title {
   font-family: Koulen;
   color:white;
   font-size: 30px;
+}
+
+/* NAVBAR CITAS */
+#nav-bar-citas .circle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background-color: #F84646;
+  border-radius: 100%;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+#nav-bar-citas .container-paso-cita {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#nav-bar-citas .container-paso-cita {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 10px;
+  margin:0px;
+}
+
+#nav-bar-citas .si {
+  border-bottom: solid 3px #F84646;
+}
+
+#nav-bar-citas .no {
+  border-bottom: solid 3px #ffffff36;
+}
+
+#nav-bar-citas p {
+  text-align: center;
+  color:#ffffff60;
+}
+
+#nav-bar-citas .activo p {
+  color:#ffffff;
+}
+
+@media (max-width: 650px) {
+  #nav-bar-citas .no-activo {
+    display: none;
+  }
+}
+
+#contacto{
+  display: grid;
+  gap: 30px;
+  grid-template-columns: auto;
+  grid-template-rows: 1;
+  background-color: #292929;
+  padding: 60px;
+  margin-bottom: 0px;
+  padding-bottom: 200px;
+}
+#contacto-title{
+  color: white !important;
+  padding-bottom: 10px;
+  font-family: "Koulen", sans-serif;
+  font-weight: 400;
+  font-size: 60px;
+  font-style: normal;
+}
+#contacto-text, #staff-text{
+  color: #D9D9D9;
+  font-family: 'Koulen', sans-serif;
+  font-weight: lighter;
+  font-style: normal;
+  grid-column: 1;
+}
+#contacto-img{
+  padding-right: 300px;
+  margin-top: 50px;
+  grid-column: 2;
+  background-image: url("../img/contactoImage.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+#contacto input, #contacto textarea{
+  border-bottom: 1px solid #D9D9D9;
+  margin-bottom: 5px;
+  width: 100%;
+}
+#button{
+  background-color:#F84646;
+  color: white !important;
+  box-shadow: 0 5px #474545;
+  font-size: 22px;
+  height: 45px;
+  width: 120px !important;
+  border-bottom: none !important;
+  margin-top: 15px;
+  border-radius: 4px;
+  text-align: center;
+  position: absolute;
+}
+#button:hover{
+  background-color: #811313;
+}
+#button:active{
+  background-color: #811313;
+  box-shadow: 0 5px #474545;
+  transform: translateY(4px);
+}
+
+#toast{
+  background-color: #333;
+}
+
+#button:disabled {
+  background: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  transform: none !important;
+}
+
+/*Resumen reserva*/
+#tarjeta-reserva{
+  border: 1px;
+  border-radius: 4px;
+  border-color: white;
+}
+
+/* seleccionar personal */
+
+#profesional-container {
+  scrollbar-width: thin; /* Ancho del scrollbar */
+  scrollbar-color: #333 #999; /* Color del thumb y track */
+  padding-right: 10px;
+}
+
+#profesional-container div {
+  border: none 0px;
+  background-color: #232323;
+}
+
+#seleccionar-personal .seleccionado {
+  border: solid #F84646 1px;
+}
+
+.servicios-container {
+  scrollbar-width: thin; /* Ancho del scrollbar */
+  scrollbar-color: #333 #999; /* Color del thumb y track */
+  padding-right: 10px;
+}
+
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(400deg);
+  }
+}
+
+#resumen-usuario{
+  color: #9b9b9b;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+}
+
+#input-usuario{
+  color: white !important;
+  padding-bottom: 4px;
+  margin-bottom: 12px;
+  font-size: 18px;
+}
+
+#form-fields-text textarea, #form-fields-text input{
+  background-color:rgba(255, 255, 255, 0.1);
+  color: white !important;
+  border-radius: 6px;
+  border: 1px solid #8d8d8d;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
+#global-citas-style{
+  border-top: 2px solid #8d8d8d;
+  padding-top: 10px;
 }
